<resources>
    <string name="app_name">UIThreadDemo</string>
    <string name="string_startthread">Start Thread</string>
    <string name="string_stopthread">Stop thread</string>
    <string name="string_startservice">Start Service</string>
    <string name="string_stopservice">Stop Service</string>
    <string name="service_demo_tag">ServiceDemo</string>
    <string name="string_bind">Bind Service</string>
    <string name="string_unbind">Unbind Service</string>
    <string name="string_getrandom_number">Get random number</string>
    <string name="worker_demo">WorkerDemo</string>
    <string name="worker1">Worker1</string>
    <string name="worker2">Worker2</string>
    <string name="worker3">Worker3</string>
    <string name="channelId">123</string>
</resources>
